--- a/templates/report/option.mustache
+++ b/templates/report/option.mustache
@@ -49,10 +49,13 @@
 		</div>
 	</div>
 	<div class="mb-1 collapse" id="collapseoptionshortinfo-{{id}}">
-		<div class="mod-booking-report-option-teachers">{{{teachers}}}</div>
 		<div class="mod-booking-report-option-instance">
 			<i class="fa fa-fw fa-sm fa-calendar-check-o text-gray" aria-hidden="true"></i>&nbsp;
 			<a href="{{instancelink}}" target="_blank">{{instancename}}</a>
+		</div>
+		<div class="mod-booking-report-option-course">
+			<i class="fa fa-fw fa-sm fa-graduation-cap text-gray" aria-hidden="true"></i>&nbsp;
+			<a href="{{courselink}}" target="_blank">{{coursename}}</a>
 		</div>
 	</div>
 </div>
