--- a/templates/booked_users.mustache
+++ b/templates/booked_users.mustache
@@ -36,7 +36,7 @@
     {{#bookedusers}}
         <div class="card">
             <div class="card-header bg-transparent" id="accordion-heading-bookedusers">
-                <div class="btn btn-link btn-block text-left btn-lg font-weight-bold" role="button" data-toggle="collapse" data-target="#accordion-item-bookedusers" aria-expanded="true" aria-controls="accordion-item-bookedusers">
+                <div class="bookingstracker-header" role="button" data-toggle="collapse" data-target="#accordion-item-bookedusers" aria-expanded="true" aria-controls="accordion-item-bookedusers">
                     <i class="fa fa-fw fa-ticket" aria-hidden="true"></i>&nbsp;{{#str}} bookings, mod_booking {{/str}}
                 </div>
             </div>
@@ -50,7 +50,7 @@
     {{#waitinglist}}
         <div class="card">
             <div class="card-header bg-transparent" id="accordion-heading-waitinglist">
-                <div class="btn btn-link btn-block text-left btn-lg font-weight-bold" role="button" data-toggle="collapse" data-target="#accordion-item-waitinglist" aria-expanded="false" aria-controls="accordion-item-waitinglist">
+                <div class="bookingstracker-header" role="button" data-toggle="collapse" data-target="#accordion-item-waitinglist" aria-expanded="false" aria-controls="accordion-item-waitinglist">
                     <i class="fa fa-fw fa-hourglass" aria-hidden="true"></i>&nbsp;{{#str}} waitinglist, mod_booking {{/str}}
                 </div>
             </div>
@@ -64,7 +64,7 @@
     {{#reservedusers}}
         <div class="card">
             <div class="card-header bg-transparent" id="accordion-heading-reservedusers">
-                <div class="btn btn-link btn-block text-left btn-lg font-weight-bold" role="button" data-toggle="collapse" data-target="#accordion-item-reservedusers" aria-expanded="false" aria-controls="accordion-item-reservedusers">
+                <div class="bookingstracker-header" role="button" data-toggle="collapse" data-target="#accordion-item-reservedusers" aria-expanded="false" aria-controls="accordion-item-reservedusers">
                     <i class="fa fa-fw fa-shopping-cart" aria-hidden="true"></i>&nbsp;{{#str}} reservedusers, mod_booking {{/str}}
                 </div>
             </div>
@@ -78,7 +78,7 @@
     {{#userstonotify}}
         <div class="card">
             <div class="card-header bg-transparent" id="accordion-heading-userstonotify">
-                <div class="btn btn-link btn-block text-left btn-lg font-weight-bold" role="button" data-toggle="collapse" data-target="#accordion-item-userstonotify" aria-expanded="false" aria-controls="accordion-item-userstonotify">
+                <div class="bookingstracker-header" role="button" data-toggle="collapse" data-target="#accordion-item-userstonotify" aria-expanded="false" aria-controls="accordion-item-userstonotify">
                     <i class="fa fa-fw fa-bell-o" aria-hidden="true"></i>&nbsp;{{#str}} userstonotify, mod_booking {{/str}}
                 </div>
             </div>
@@ -92,7 +92,7 @@
     {{#deletedusers}}
         <div class="card">
             <div class="card-header bg-transparent" id="accordion-heading-deletedusers">
-                <div class="btn btn-link btn-block text-left btn-lg font-weight-bold" role="button" data-toggle="collapse" data-target="#accordion-item-deletedusers" aria-expanded="false" aria-controls="accordion-item-deletedusers">
+                <div class="bookingstracker-header" role="button" data-toggle="collapse" data-target="#accordion-item-deletedusers" aria-expanded="false" aria-controls="accordion-item-deletedusers">
                     <i class="fa fa-fw fa-ban" aria-hidden="true"></i>&nbsp;{{#str}} deletedbookings, mod_booking {{/str}}
                 </div>
             </div>
@@ -106,7 +106,7 @@
     {{#bookinghistory}}
         <div class="card">
             <div class="card-header bg-transparent" id="accordion-heading-bookinghistory">
-                <div class="btn btn-link btn-block text-left btn-lg font-weight-bold" role="button" data-toggle="collapse" data-target="#accordion-item-bookinghistory" aria-expanded="false" aria-controls="accordion-item-bookinghistory">
+                <div class="bookingstracker-header" role="button" data-toggle="collapse" data-target="#accordion-item-bookinghistory" aria-expanded="false" aria-controls="accordion-item-bookinghistory">
                     <i class="fa fa-history" aria-hidden="true"></i>&nbsp;{{#str}} bookinghistory, mod_booking {{/str}}
                 </div>
             </div>
