--- a/templates/report/option.mustache
+++ b/templates/report/option.mustache
@@ -37,15 +37,17 @@
 	<div>
 		<div class="h6 mb-1">
 			<a href="{{report2link}}" target="_blank">
-				<i class="fa fa-fw fa-ticket" aria-hidden="true"></i>&nbsp;{{#titleprefix}}{{.}} - {{/titleprefix}}{{title}}
+				<i class="fa fa-ticket" aria-hidden="true"></i>
 			</a>&nbsp;
 			<a href="{{optionlink}}" target="_blank">
-				<i class="fa fa-fw fa-external-link" aria-hidden="true"></i>
+				<i class="fa fa-external-link" aria-hidden="true"></i>
 			</a>
-			<span class="ml-1"><a class="btn btn-link btn-sm" data-toggle="collapse" href="#collapseoptionshortinfo-{{id}}"
+			<span class="ml-1">
+				<a class="btn btn-link btn-sm" data-toggle="collapse" href="#collapseoptionshortinfo-{{id}}"
 				role="button" aria-expanded="false" aria-controls="collapseoptionshortinfo-{{id}}">
 				<i class="fa fa-chevron-down" aria-hidden="true"></i>
-			</a></span>
+				</a>
+			</span>
 		</div>
 	</div>
 	<div class="mb-1 collapse" id="collapseoptionshortinfo-{{id}}">
