fix titles in template (#898)

--- a/templates/report/option.mustache
+++ b/templates/report/option.mustache
@@ -36,10 +36,10 @@
 <div class="mod-booking-report-option ml-3">
 	<div>
 		<div class="h6 mb-1">
-			<a href="{{report2link}}" target="_blank">
+			<a href="{{report2link}}" title="Report for {{title}}" target="_blank">
 				<i class="fa fa-ticket" aria-hidden="true"></i>
 			</a>&nbsp;
-			<a href="{{optionlink}}" target="_blank">
+			<a href="{{optionlink}}" title="{{title}}" target="_blank">
 				<i class="fa fa-external-link" aria-hidden="true"></i>
 			</a>
 			<span class="ml-1">
