--- a/templates/table_list_container.mustache
+++ b/templates/table_list_container.mustache
@@ -83,7 +83,7 @@
      <div class="wunderbyte_table_container_{{idstring}} {{uniqueid}}{{!
           }}{{#showfilterbutton}} wunderbyte_table_filter_on{{/showfilterbutton}}{{!
           }}{{#filterdeactivated}} inactivefilter{{/filterdeactivated}}{{!
-          }}{{#nofilteratall}} nofilter{{/nofilteratall}} mt-2 px-2">
+          }}{{#nofilteratall}} nofilter{{/nofilteratall}} mt-2 px-2" data-encodedtable="{{encodedtable}}">
           <div class="container-fluid ml-0">
                <div class="row mb-2">
                     <div>
