--- a/templates/table_list_container.mustache
+++ b/templates/table_list_container.mustache
@@ -80,6 +80,11 @@
      <div class="norecordsfound">{{#str}} norecords, local_wunderbyte_table {{/str}}</div>
 {{/norecords}}
 {{^norecords}}
+     {{#errormessage}}
+          <div class="alert alert-danger" role="alert">
+               {{errormessage}}
+          </div>
+     {{/errormessage}}
      <div class="wunderbyte_table_container_{{idstring}} {{uniqueid}}{{!
           }}{{#showfilterbutton}} wunderbyte_table_filter_on{{/showfilterbutton}}{{!
           }}{{#filterdeactivated}} inactivefilter{{/filterdeactivated}}{{!
