--- a/templates/table_list_container.mustache
+++ b/templates/table_list_container.mustache
@@ -95,13 +95,17 @@
                          {{> local_wunderbyte_table/component_toggle }}
                          {{> local_wunderbyte_table/component_reload }}
                          {{> local_wunderbyte_table/component_edit }}
-                         {{> local_wunderbyte_table/component_print }}
                     </div>
                     <div class="ml-auto">
                          {{> local_wunderbyte_table/component_switchtemplates }}
                          {{> local_wunderbyte_table/component_sort }}
                          {{> local_wunderbyte_table/component_search }}
                     </div>
+               </div>
+               <div>
+                    {{^showdownloadbuttonatbottom}}
+                    {{> local_wunderbyte_table/component_print }}
+                    {{/showdownloadbuttonatbottom}}
                </div>
           </div>
           <div class="wunderbyte_table_container {{#showfilterontop}}showontop{{/showfilterontop}} {{uniqueid}}">
@@ -123,6 +127,11 @@
                     {{> mod_booking/table_list }}
                </div>
           </div>
+          {{#showdownloadbuttonatbottom}}
+          <div class="ml-2">
+               {{> local_wunderbyte_table/component_print }}
+          </div>
+          {{/showdownloadbuttonatbottom}}
      </div>
 {{#js}}
      require(['local_wunderbyte_table/init'], function(init) {
