First steps of integrating competecies in optionview (unfinished) #996

--- a/templates/bookingoption_description_view.mustache
+++ b/templates/bookingoption_description_view.mustache
@@ -328,6 +328,14 @@
                 </div>
             </div>
         </div>
+        <details class="competency">
+        <summary class="competencyheader">
+            {{competencyheader}}
+        </summary>
+        <div class="competencycontent">
+            {{{competencies}}}
+        </div>
+        </details>
     </div>
 </div>
 
