Add columnfilter to shortcode and enable display of similar options in optionview #996

--- a/templates/bookingoption_description_view.mustache
+++ b/templates/bookingoption_description_view.mustache
@@ -328,14 +328,16 @@
                 </div>
             </div>
         </div>
-        <details class="competency">
-        <summary class="competencyheader">
-            {{competencyheader}}
-        </summary>
-        <div class="competencycontent">
-            {{{competencies}}}
-        </div>
-        </details>
+        {{#competencyheader}}
+            <details class="competency">
+                <summary class="competencyheader">
+                    {{competencyheader}}
+                </summary>
+                <div class="competencycontent">
+                    {{{competencies}}}
+                </div>
+            </details>
+        {{/competencyheader}}
     </div>
 </div>
 
