Improvement: Add competencies to card display #996

--- a/templates/table_cards.mustache
+++ b/templates/table_cards.mustache
@@ -181,5 +181,9 @@
       require(['mod_booking/bookit'], function(fn) {
          fn.initprepageinline(null, null, null, null);
       });
+
+      require(['mod_booking/bookingcompetencies'], function(init) {
+        init.init('{{encodedtable}}');
+      });
    {{/js}}
 {{/norecords}}
