New feature: Show extra info (entity, custom fields, comments) of option dates in list of booking options. (Wunderbyte-GmbH/Wunderbyte-GmbH#649)

--- a/templates/col_coursestarttime.mustache
+++ b/templates/col_coursestarttime.mustache
@@ -39,7 +39,7 @@
     }
 }}
 {{^selflearningcourse}}{{#datesexist}}
-<div class="booking-optiondates-area">
+<div class="booking-showdates-area">
 {{#showcollapsebtn}}
     <div class='booking-showdates-collapse mt-1'>
         <span>
@@ -61,20 +61,7 @@
         {{#dates}}
         <div>
             {{{datestring}}}
-            {{#entitylink}}
-            <span class="entity-for-optiondate-area">
-                &nbsp;<i class="fa fa-fw fa-map-marker" aria-hidden="true"></i>{{{.}}}
-            </span>
-            {{/entitylink}}
-            <div {{^customfields}}style="display:none"{{/customfields}}>
-                <ul>
-                {{#customfields}}
-                    <li>
-                        {{name}}{{{value}}}
-                    </li>
-                {{/customfields}}
-                </ul>
-            </div>
+            {{> mod_booking/optiondates_extrainfo }}
         </div>
         {{/dates}}
     </div>
@@ -91,20 +78,7 @@
             {{#dates}}
             <div>
                 {{{datestring}}}
-                {{#entitylink}}
-                <span class="entity-for-optiondate-area">
-                    &nbsp;<i class="fa fa-fw fa-map-marker" aria-hidden="true"></i>{{{.}}}
-                </span>
-                {{/entitylink}}
-                <div {{^customfields}}style="display:none"{{/customfields}}>
-                    <ul>
-                    {{#customfields}}
-                        <li>
-                            {{name}}{{{value}}}
-                        </li>
-                    {{/customfields}}
-                    </ul>
-                </div>
+                {{> mod_booking/optiondates_extrainfo }}
             </div>
             {{/dates}}
         </div>
