--- a/templates/signin_downloadform.mustache
+++ b/templates/signin_downloadform.mustache
@@ -141,6 +141,15 @@
 						    </select>
 					    </div>
 					</div>
+					 <div class="col-md-4 span4 col-4">
+						<label for="saveasformat">Save as format</label>
+						<div>
+							<select name="saveasformat" id="saveasformat" class="custom-select">
+								<option value="pdf" selected>PDF</option>
+								<option value="word">Word</option>
+							</select>
+						</div>
+					</div>
 				</div>
 		    </div>
 		</div>
