signature lang strings

--- a/templates/signin_downloadform.mustache
+++ b/templates/signin_downloadform.mustache
@@ -142,7 +142,7 @@
 					    </div>
 					</div>
 					 <div class="col-md-4 span4 col-4">
-						<label for="saveasformat">Save as format</label>
+						<label for="saveasformat">{{#str}}signinformat, mod_booking{{/str}}</label>
 						<div>
 							<select name="saveasformat" id="saveasformat" class="custom-select">
 								<option value="pdf" selected>PDF</option>
