fix: use inline-block instead of inline

--- a/templates/table_list_row.mustache
+++ b/templates/table_list_row.mustache
@@ -213,7 +213,7 @@
             {{/leftside}}
             <div class="d-block">
             {{#footer}}
-              {{#columnclass}}<div class="d-inline {{.}} {{key}}">{{/columnclass}}
+              {{#columnclass}}<div class="d-inline-block {{.}} {{key}}">{{/columnclass}}
                 <span {{^value}} style="display:none" {{/value}}>
                 {{#columniclassbefore}}
                   <i class="{{.}}" aria-hidden="true"></i>
