--- a/templates/bookingoption_description_view.mustache
+++ b/templates/bookingoption_description_view.mustache
@@ -234,7 +234,7 @@
                                 <i class="fa fa-fw fa-user" aria-hidden="true"></i>
                             </span>
                             <span>
-                                {{#str}} responsible, mod_booking {{/str}}: <a href="{{link}}" target="_blank">{{firstname}} {{lastname}}</a> (Email: {{email}})
+                                {{#str}} responsible, mod_booking {{/str}}: <a href="{{link}}" target="_blank">{{firstname}} {{lastname}}</a>
                             </span>
                         </li>
                         {{/responsiblecontactuser}}
