bs5: add data-bs-toggle="collapse" and data-bs-target="<item>" attributes

--- a/templates/bookingoption_description_dates.mustache
+++ b/templates/bookingoption_description_dates.mustache
@@ -39,7 +39,7 @@
     }
 }}
 {{#datesexist}}
-    <a class="collapseoptiondatesbutton" data-toggle="collapse" href="#collapseoptiondates" role="button" aria-expanded="false" aria-controls="collapseoptiondates">
+    <a class="collapseoptiondatesbutton" data-toggle="collapse" data-bs-toggle="collapse" href="#collapseoptiondates" role="button" aria-expanded="false" aria-controls="collapseoptiondates">
         <i class="fa fa-calendar" aria-hidden="true"></i>&nbsp;{{#str}} dates, mod_booking {{/str}}...
     </a>
     <div id="collapseoptiondates" class="show list-group-item border-0 pl-0 pr-0">
