--- a/templates/bookingoption_description_prepagemodal_bookit.mustache
+++ b/templates/bookingoption_description_prepagemodal_bookit.mustache
@@ -199,7 +199,7 @@
                     </li>
                     {{/institution}}
                 </ul>
-                <a class="collapseoptiondatesbutton" data-toggle="collapse" href="#collapseoptiondates" role="button" aria-expanded="false" aria-controls="collapseoptiondates">
+                <a class="collapseoptiondatesbutton" data-toggle="collapse" data-bs-toggle="collapse" href="#collapseoptiondates" role="button" aria-expanded="false" aria-controls="collapseoptiondates">
                     {{#str}} showdates, mod_booking {{/str}}
                 </a>
                 <div id="collapseoptiondates" class="collapse list-group-item">
