--- a/templates/bookingpage/prepageinline.mustache
+++ b/templates/bookingpage/prepageinline.mustache
@@ -38,8 +38,9 @@
 </div>
 
 <div class=""
-    data-toggle="collapse"
+    data-toggle="collapse" data-bs-toggle="collapse"
     data-target="#sbPrePageInline_{{optionid}}_{{uniquid}}"
+    data-bs-target="#sbPrePageInline_{{optionid}}_{{uniquid}}"
     aria-expanded="false"
     aria-controls="sbPrePageInline_{{optionid}}_{{uniquid}}"
     role="button">
