--- a/templates/page_allteachers.mustache
+++ b/templates/page_allteachers.mustache
@@ -47,7 +47,7 @@
 }
 }}
 {{#canedit}}
-<a class="text-primary" data-toggle="collapse" href="#collapsiblelistofteachers" role="button" aria-expanded="false" aria-controls="collapsiblelistofteachers">
+<a class="text-primary" data-toggle="collapse" data-bs-toggle="collapse" href="#collapsiblelistofteachers" role="button" aria-expanded="false" aria-controls="collapsiblelistofteachers">
     <i class="fa fa-envelope" aria-hidden="true"></i> {{#str}} showteachersmailinglist, mod_booking {{/str}}
 </a>
 <div class="collapse card bg-light rounded p-2 page-allteachers-teachersmailinglist" id="collapsiblelistofteachers">
