--- a/templates/report/option.mustache
+++ b/templates/report/option.mustache
@@ -44,7 +44,7 @@
 				<i class="fa fa-external-link" aria-hidden="true"></i>
 			</a>
 			<span class="ml-1">
-				<a class="btn btn-link btn-sm" data-toggle="collapse" href="#collapseoptionshortinfo-{{id}}"
+				<a class="btn btn-link btn-sm" data-toggle="collapse" data-bs-toggle="collapse" href="#collapseoptionshortinfo-{{id}}"
 				role="button" aria-expanded="false" aria-controls="collapseoptionshortinfo-{{id}}">
 				<i class="fa fa-chevron-down" aria-hidden="true"></i>
 				</a>
